--- a/TP Paradigmas/backup/project1.lpi
+++ b/TP Paradigmas/backup/project1.lpi
@@ -39,6 +39,16 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Interfaz"/>
       </Unit>
+      <Unit>
+        <Filename Value="validaciones.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Validaciones"/>
+      </Unit>
+      <Unit>
+        <Filename Value="listamemoriasecundaria.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="ListaMemoriaSecundaria"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
