--- a/TP Paradigmas/project1.lpi
+++ b/TP Paradigmas/project1.lpi
@@ -49,6 +49,16 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="ListaMemoriaSecundaria"/>
       </Unit>
+      <Unit>
+        <Filename Value="listamemoriaprincipalpoo.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="listamemoriaprincipalPOO"/>
+      </Unit>
+      <Unit>
+        <Filename Value="listamemoriasecundariapoo.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="listamemoriasecundariaPOO"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
